k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projeto-chat
  labels:
    app: projeto-chat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: projeto-chat
  template:
    metadata:
      labels:
        app: projeto-chat
    spec:
      containers:
      - name: app
        image: jefferson1707/projeto_chat:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: data-storage
          mountPath: /app/instance
      volumes:
      - name: data-storage
        emptyDir: {}
